--- a/03-transparency/src/index.html
+++ b/03-transparency/src/index.html
@@ -5,6 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+        <h1>OpenLayers mapa</h1>
         <div id="map"></div>
         <div id="switcher">
                 <ul>
